src/components/catalog/Filters/Filters.module.css
.wrapper {
  width: 924px;
  margin: 84px auto 56px auto;

  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  gap: 16px;
}

.block {
  display: flex;
  flex-direction: column;
  gap: 8px;
  position: relative;
}

.label {
  font-family: var(--font-manrope);
  font-size: 12px;
  line-height: 16px;
  font-weight: 400;
  color: var(--color-gray);
}


.select {
  width: 204px;
  height: 44px;
  background: var(--color-bg-light-2);
  border-radius: 12px;

  padding: 12px 16px;

  display: flex;
  justify-content: space-between;
  align-items: center;

  font-family: var(--font-manrope);
  font-size: 16px;
  font-weight: 500;
  color: var(--color-dark);

  cursor: pointer;
}

.arrow {
  margin-top: 4px;
  transition: transform 0.2s ease-in-out;
}

.arrowOpen {
  transform: rotate(180deg);
}

/* ВЫПАДАЮЩЕЕ ОКНО */
.options {
  position: absolute;
  top: 100%;
  left: 0;
  margin-top: 4px;

  width: 100%;
  max-height: 188px;
  overflow-y: auto;

  background: var(--color-white);
  border: 1px solid var(--color-border);
  border-radius: 12px;
  box-shadow: 0 4px 36px rgba(0, 0, 0, 0.06);

  padding: 8px 0;

  display: flex;
  flex-direction: column;
  z-index: 1000;
}


.option {
  width: 100%;
  padding: 8px 16px;
  border: none;
  background: transparent;
  text-align: left;

  font-family: var(--font-manrope);
  font-size: 16px;
  font-weight: 500;
  color: var(--color-gray);

  cursor: pointer;
}

.option:hover {
  background: #f5f7fa;
  color: var(--color-dark);
}

.optionActive {
  background: #e0ebff;
  color: var(--color-blue-hover);
}

/* MILEAGE */
.mileageBox {
  width: 320px;
  height: 44px;
  background: var(--color-bg-light-2);
  border-radius: 12px;

  display: flex;
  align-items: center;
}

.mileageField {
  width: 50%;
  height: 100%;
  padding-left: 16px;

  display: flex;
  align-items: center;
  gap: 8px;
}

.mileageText {
  font-family: var(--font-manrope);
  font-size: 16px;
  font-weight: 500;
  color: var(--color-dark);
}

.mileageInput {
  width: 100%;
  height: 100%;
  border: none;
  background: transparent;
  outline: none;

  font-family: var(--font-manrope);
  font-size: 16px;
  font-weight: 500;
  color: var(--color-dark);
}

.mileageInput::-webkit-inner-spin-button,
.mileageInput::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.divider {
  width: 1px;
  height: 44px;
  background: var(--color-border);
}


.searchBtn {
  width: 120px;
  height: 44px;

  border-radius: 12px;
  border: none;
  background: var(--color-blue-main);

  font-family: var(--font-manrope);
  font-size: 16px;
  font-weight: 500;
  color: var(--color-white);

  cursor: pointer;
}

.searchBtn:hover {
  background: var(--color-blue-hover);
}

